# classy-parallel

./: classy-parallel.cabal
Control/Monad/: Parallel.hs
