Name:                classy-parallel
Version:             0.1.0
Cabal-Version:       >= 1.2
Build-Type:          Simple
Synopsis:            Parallel execution of monadic computations
Category:            Control, Monads
Tested-with:         GHC
Description:
  This package defines classes of monads that can perform multiple executions in parallel and combine their results. For
  any monad that's an instance of the class, the package re-implements a subset of the Control.Monad interface, but with
  parallel execution.
  
License:             GPL
License-file:        LICENSE.txt
Copyright:           (c) 2010-2011 Mario Blazevic
Author:              Sam Anklesaria
Maintainer:          amsay@amsay.net

Library
  Exposed-Modules:   Control.Monad.Parallel
  Build-Depends:     base < 5, parallel, transformers, resourcet, lifted-base, monad-control
